--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 
-<body>
+<body onload="openPage()">
     <form id="form-pergunta-chat">
         <div>
             <input id="campo-pergunta" placeholder="digite aqui...">
@@ -58,8 +58,14 @@
     </form>
 
     <script>
+        const openPage = (event) => {
+            let a = document.createElement('a');
+            a.setAttribute('target', '_black');
+            a.setAttribute('href', 'https://platform.openai.com/account/api-keys');
+            a.click();
+        }
         const FORM = document.getElementById('form-pergunta-chat')
-        const API_KEY = "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"
+        const API_KEY = "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"
         if (FORM) {
             FORM.addEventListener('submit', async (event) => {
                 event.preventDefault()
@@ -92,7 +98,15 @@
                     }),
 
                 })
-                    .then((response) => response.json())
+                    .then(response => {
+                        if (!response.ok) {
+                            console.log(response);
+                            alert('ERRO');
+                            throw new Error("Erro de Requisicao");
+                        } else {
+                            return response.json();
+                        }
+                    })
                     .then((dados) => {
                         console.log(dados.choices[0].text);
                         res.innerText = dados.choices[0].text
