--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             a.click();
         }
         const FORM = document.getElementById('form-pergunta-chat')
-        const API_KEY = "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"
+        const API_KEY = ""
         if (FORM) {
             FORM.addEventListener('submit', async (event) => {
                 event.preventDefault()
